--- a/resources/src/shared/ui/Container/ui/Container.module.scss
+++ b/resources/src/shared/ui/Container/ui/Container.module.scss
@@ -1,6 +1,6 @@
 .Container {
 	box-sizing: content-box;
-	max-width: rem($authWidthContainer);
+	max-width: rem($maxWidthContainer);
    
    margin: 0 auto;
 }
