--- a/resources/src/shared/ui/Loader/ui/Loader.module.scss
+++ b/resources/src/shared/ui/Loader/ui/Loader.module.scss
@@ -17,7 +17,7 @@
     animation-timing-function: cubic-bezier(0, 1, 1, 0);
 
     border-radius: 50%;
-    background: $accentColor;
+    background: $blueColor;
 }
 
 .ldsEllipsis div:nth-child(1) {
