--- a/resources/src/shared/ui/Select/ui/Select/Select.module.scss
+++ b/resources/src/shared/ui/Select/ui/Select/Select.module.scss
@@ -2,25 +2,24 @@
     $p: &;
     position: relative;
 
-    // display: flex;
-    // align-items: center;
-    // flex-direction: column;
-    // justify-content: space-between;
+    width: max-content;
 
     border-radius: 12px;
+
+    font-size: rem(20);
 
     &__box {
         display: flex;
         align-items: center;
 
-        padding: rem(4) rem(8);
+        box-sizing: content-box;
+        margin-bottom: rem(1);
+        padding: 15px;
 
-        
-        cursor: pointer;
+        cursor: pointer;    
 
-        border: 1px solid #3f409b;
+        border: rem(1) solid $blueColor;
         border-radius: 8px;
-
         gap: rem(20);
     }
     &_active {
@@ -28,7 +27,7 @@
             // margin-top: -6px;
 
             // transform: rotate(180deg) translateY(100%);
-            transform: rotate(180deg);
+            transform: rotate3d(1, 0, 0, 180deg);
         }
 
         #{$p}__placeholder {
@@ -57,19 +56,28 @@
         display: grid;
 
         width: 100%;
-        padding: rem(2);
-    
 
         transition: opacity $primaryTransition;
 
-        border: 1px solid #3f409b;
+        border: 1px solid #3f409b;                                                                      
         border-radius: 8px;
         background-color: rgba(255, 255, 255, 1);
-        // position: absolute;
-        // z-index: 10;
-        
+
         > *:not(:last-child) {
-            border-bottom: rem(1) solid #3f409b;
+            // border-bottom: rem(1) solid #3f409b;
+            &::after {
+                position: absolute;
+                bottom: 0;
+                left: 50%;
+
+                width: percent(467, 498);
+                height: rem(1);
+
+                content: "";
+                transform: translateX(-50%);
+
+                background-color: $blueColor;
+            }
         }
     }
     &__placeholder {
@@ -77,31 +85,12 @@
         align-items: center;
         justify-content: flex-start;
 
-        box-sizing: border-box;
         width: 100%;
-        height: 30px;
-        padding: 5px;
 
-
-        color: rgba(0, 0, 0, 0.6);
-        background: rgb(255, 255, 255);
-
-        font-family: "Montserrat";
-        line-height: 20px;
-
-        &[data-selected="true"] {
-            color: rgb(0, 0, 0);
-        }
+        color: $blueColor;
     }
 
     &__arrow {
-        transition: transform $primaryTransition;
-        // position: absolute;
-        // top: 100%;
-        // right: 5%;
-
-        // transition: transform 0.2s ease-in-out, margin-top 0.2s ease-in-out;
-        // transform: translateY(-100%);
-        // pointer-events: none;
+        transition: transform 0.45s linear;
     }
 }
