--- a/resources/src/entities/Rooms/ui/RoomItem/RoomItem.module.scss
+++ b/resources/src/entities/Rooms/ui/RoomItem/RoomItem.module.scss
@@ -4,17 +4,24 @@
 
     padding: rem(25);
 
-    border: 1px solid $blueColor;
+    cursor: pointer;
+    transition: scale 0.3s linear;
 
+    border: 1px solid $blueColor;
     border-radius: rem(15);
-    gap: 20;
+    scale: 1;
+
+    &:hover {
+        scale: 1.05;
+    }
     &__img {
         width: rem(218);
         height: rem(176);
         margin-bottom: rem(18);
 
+        transition: background-color 0.3s linear;
+
         border-radius: rem(15);
-        background-color: $blueColor;
     }
     &__roomNumber {
         text-align: center;
