--- a/resources/main/src/entities/Rooms/ui/RoomItem/RoomItem.module.scss
+++ b/resources/main/src/entities/Rooms/ui/RoomItem/RoomItem.module.scss
@@ -1,32 +1,25 @@
 .RoomItem {
-    max-width: rem(268);
-    max-height: rem(285);
 
-    padding: rem(25);
+    &__link {
+        display: flex;
+        flex-direction: column;
 
-    cursor: pointer;
-    transition: scale 0.3s linear;
-
-    border: 1px solid $blueColor;
-    border-radius: rem(15);
-    scale: 1;
-
-    &:hover {
-        scale: 1.05;
+        line-height: 1.7;
+        row-gap: rem(14);
     }
-    &__img {
-        width: rem(218);
-        height: rem(176);
-        margin-bottom: rem(18);
 
-        transition: background-color 0.3s linear;
-
-        border-radius: rem(15);
-    }
-    &__roomNumber {
+    &__slug {
         text-align: center;
 
-        font-size: rem(28);
-        font-weight: 500;
+        font-size: rem(14);
     }
+}
+
+
+.Skeleton {
+}
+
+
+.FacultySkeleton {
+    
 }
