--- a/resources/main/src/shared/ui/Select/ui/Option/Option.module.scss
+++ b/resources/main/src/shared/ui/Select/ui/Option/Option.module.scss
@@ -16,7 +16,7 @@
     &:hover {
         background-color: rgba(0, 0, 0, 0.1);
     }
-    &__dorm {
+    &__bold {
       font-weight: 400;
     }
 }
