--- a/resources/main/src/scss/tools/variables.scss
+++ b/resources/main/src/scss/tools/variables.scss
@@ -5,6 +5,8 @@ $layoutColor: #fff;
 $primaryTextColor: #3F409B;
 
 $blueColor: #3F409B;
+$blueColorHover: rgba(63, 64, 155, 0.8);
+$whiteColor: #fff;
 
 $primaryTransition: 0.3s ease;
 $secondaryTransition: 0.2s ease;
