--- a/resources/main/src/shared/ui/Input/Input.module.scss
+++ b/resources/main/src/shared/ui/Input/Input.module.scss
@@ -1,71 +1,18 @@
 .Input {
-    $p: &;
-    display: flex;
-
-    align-items: center;
-
-    gap: em(8);
-
-    &:focus {
-        outline: none;
-    }
-
+    width: 100%;
+    min-width: 0;
+    padding: rem(16);
+ 
+    border: rem(1) solid $blueColor;
+ 
+    border-radius: rem(15);
+ 
+    font-size: rem(24);
+    line-height: rem(28);
+ 
+ 
+ 
     &::placeholder {
-        color: #3f409b;
-    }
-
-    &__wrapper {
-        position: relative;
-
-        width: 100%;
-    }
-
-    &__icon {
-        position: absolute;
-        fill: $blueColor;
-
-        top: 50%;
-        left: em(18);
-
-        transform: translateY(-50%);
-    }
-
-    &_icon {
-        #{$p}__field {
-            padding-left: em(40) !important;
-        }
-    }
-
-    &_disabled {
-        #{$p}__field {
-            cursor: not-allowed;
-        }
-    }
-
-    &_size {
-        &_medium {
-            #{$p}__field {
-                // padding: em(8) em(16);
-                padding: rem(22) em(12);
-            }
-        }
-
-        &_small {
-            #{$p}__field {
-                padding: em(5) em(16);
-            }
-        }
-    }
-
-    &__field {
-        width: 100%;
-
-        border: em(1) solid $blueColor;
-        border-radius: em(48);
-        background: transparent;
-    }
-
-    &__label {
-        white-space: nowrap;
+       color: rgba(63, 64, 155, 0.57);
     }
 }
