--- a/resources/main/src/shared/ui/Container/ui/Container.module.scss
+++ b/resources/main/src/shared/ui/Container/ui/Container.module.scss
@@ -1,6 +1,12 @@
 .Container {
-	box-sizing: content-box;
-	max-width: rem($maxWidthContainer);
-   margin: 0 auto;
-   padding: 0 rem($containerPadding);
+	&_active {
+      box-sizing: content-box;
+      max-width: rem($maxWidthContainer);
+      margin: 0 auto;
+      padding: 0 rem($containerPadding);
+
+      @media (max-width: em($mobile)) {
+         padding: 0 rem(15);
+      }
+   }
 }
