--- a/resources/main/src/entities/Rooms/ui/RoomItem/RoomItem.module.scss
+++ b/resources/main/src/entities/Rooms/ui/RoomItem/RoomItem.module.scss
@@ -6,11 +6,15 @@
 
         padding: rem(23) rem(25) rem(36) rem(25);
 
-        border: rem(1) solid rgb(63, 64, 155);
+        transition: transform $primaryTransition;
 
         border-radius: rem(15);
-        background: rgb(255, 255, 255);
-        box-shadow: rem(5) rem(5) rem(14.5) 0 rgba(0, 0, 0, 0.25)
+        background: $whiteColor;
+        box-shadow: rem(5) rem(5) rem(14.5) 0 rgba(0, 0, 0, 0.25);
+
+        &:hover {
+            transform: scale(1.03);
+        }
     }
 
     &__image {
