--- a/resources/main/src/pages/RoomPage/ui/RoomPage/RoomPage.module.scss
+++ b/resources/main/src/pages/RoomPage/ui/RoomPage/RoomPage.module.scss
@@ -1,8 +1,9 @@
 .RoomPage {
    display: flex;
    flex-direction: column;
-   gap: rem(80);
+   gap: rem(20);
 
+   padding-bottom: rem(20); //! 
 
    &__container {
       display: flex;
