--- a/resources/main/src/widgets/Page/ui/Header/Header/Header.module.scss
+++ b/resources/main/src/widgets/Page/ui/Header/Header/Header.module.scss
@@ -1,8 +1,13 @@
 .Header {
+	position: sticky;
+	z-index: $headerZIndex;
+	top: 0;
+
 	padding: rem(16) 0;
 
 	border-top: rem(2) solid $blueColor;
 	border-bottom: rem(2) solid $blueColor;
+	background-color: $whiteColor;
 	&__container {
 		display: flex;
 		align-items: center;
