--- a/resources/main/src/widgets/Page/ui/Page/Page.module.scss
+++ b/resources/main/src/widgets/Page/ui/Page/Page.module.scss
@@ -2,9 +2,11 @@
 	display: flex;
 	flex-direction: column;
 
-	height: 100%;
-	margin-top: rem(46);
 	margin-bottom: rem(95);
+	// margin-top: rem(10);
+	padding-top: rem(10);
+	
+
 
 	&__main {
 		flex: 1 1 auto;
