--- a/resources/main/src/entities/Rooms/ui/RoomItem/RoomItem.module.scss
+++ b/resources/main/src/entities/Rooms/ui/RoomItem/RoomItem.module.scss
@@ -18,10 +18,14 @@
     }
 
     &__image {
-        width: 100%;
+        margin: 0 rem(-25);
+        margin-top: rem(-25);
+        // width: 100%;
 
-        border-radius: rem(15);
-        aspect-ratio: 218 / 176;
+
+        border-radius: rem(15) rem(15) 0 0;
+        // aspect-ratio: 268 / 176;
+        aspect-ratio: 268 / 180;
         object-fit: cover;
         
         &:not(:last-child) {
