--- a/resources/main/src/scss/tools/variables.scss
+++ b/resources/main/src/scss/tools/variables.scss
@@ -7,6 +7,7 @@ $primaryTextColor: #3F409B;
 $blueColor: #3F409B;
 $blueColorHover: rgba(63, 64, 155, 0.8);
 $whiteColor: #fff;
+$greenColor: #6aff00;
 $redColor: #ff0000;
 $purpleColor: #9596c8;
 
