--- a/resources/main/src/shared/ui/Buttons/ui/PrimaryButton/PrimaryButton.module.scss
+++ b/resources/main/src/shared/ui/Buttons/ui/PrimaryButton/PrimaryButton.module.scss
@@ -1,3 +1,13 @@
 .PrimaryButton {
-   
+   column-gap: rem(4);
+
+   &_icon {
+      
+   }
+
+   &__loader {
+      color: $whiteColor;
+
+      font-size: rem(6);
+   }
 }
