--- a/resources/main/src/scss/tools/variables.scss
+++ b/resources/main/src/scss/tools/variables.scss
@@ -10,6 +10,8 @@ $whiteColor: #fff;
 $greenColor: #6aff00;
 $redColor: #ff0000;
 $purpleColor: #9596c8;
+$purpleColorHover: #b4b5b8;
+
 
 $headerZIndex: 500;
 
