--- a/resources/main/src/shared/ui/Buttons/ui/PrimaryButton/PrimaryButton.module.scss
+++ b/resources/main/src/shared/ui/Buttons/ui/PrimaryButton/PrimaryButton.module.scss
@@ -1,11 +1,15 @@
 .PrimaryButton {
    column-gap: rem(4);
 
-   &_icon {
-      
+   &__icon {
+      width: 100%;
+      height: 100%;
+      max-height: rem(27);
+      fill: $whiteColor;
    }
 
    &__loader {
+      // flex: 0 0 
       color: $whiteColor;
 
       font-size: rem(6);
