--- a/resources/main/src/scss/tools/variables.scss
+++ b/resources/main/src/scss/tools/variables.scss
@@ -13,7 +13,9 @@ $purpleColor: #9596c8;
 $purpleColorHover: #b4b5b8;
 
 
-$headerZIndex: 500;
+$headerZIndex: 900;
+$overlayZindex: 700;
+$asideZindex: 800;
 
 $primaryTransition: 0.3s ease;
 $secondaryTransition: 0.2s ease;
