--- a/resources/main/src/scss/tools/variables.scss
+++ b/resources/main/src/scss/tools/variables.scss
@@ -8,6 +8,7 @@ $blueColor: #3F409B;
 $blueColorHover: rgba(63, 64, 155, 0.8);
 $whiteColor: #fff;
 $greenColor: #6aff00;
+$yellowColor: #f2f20b;
 $redColor: #ff0000;
 $purpleColor: #9596c8;
 $purpleColorHover: #b4b5b8;
