--- a/resources/main/src/shared/ui/Buttons/ui/common/style.module.scss
+++ b/resources/main/src/shared/ui/Buttons/ui/common/style.module.scss
@@ -26,5 +26,13 @@
       }
    }
 
+   &_red {
+      background-color: rgb(225, 61, 49);
+      
+      &:hover {
+         background-color: red;
+      }
+   }
+
    @include adaptiveValue("font-size", 22, 18, 0, $widthTo: $tablet);
 }
