--- a/resources/main/src/shared/ui/Fields/ui/PrimaryField/PrimaryField.module.scss
+++ b/resources/main/src/shared/ui/Fields/ui/PrimaryField/PrimaryField.module.scss
@@ -7,6 +7,14 @@
 
    font-size: rem(24);
 
+   &_readOnly {
+      #{$p} {
+         &__input {
+            pointer-events: none;
+         }
+      }
+   }
+
    &_emty {
       #{$p} {
          &__placeholder {
