--- a/resources/main/src/scss/tools/variables.scss
+++ b/resources/main/src/scss/tools/variables.scss
@@ -17,6 +17,7 @@ $purpleColorHover: #b4b5b8;
 $headerZIndex: 900;
 $overlayZindex: 700;
 $asideZindex: 800;
+$modalZindex: 700;
 
 $primaryTransition: 0.3s ease;
 $secondaryTransition: 0.2s ease;
