Created modal | beta

--- a/resources/main/src/shared/ui/Modal/ui/Modal.module.scss
+++ b/resources/main/src/shared/ui/Modal/ui/Modal.module.scss
@@ -17,7 +17,7 @@
 
 	transition: opacity 0.3s ease;
 
-	background-color: rgba($color: #000000, $alpha: 0.4);
+	background: rgba(63, 64, 155, 0.53);
 
 
 	&__shell {
