--- a/resources/main/src/entities/Menu/ui/MenuItem/MenuItem.module.scss
+++ b/resources/main/src/entities/Menu/ui/MenuItem/MenuItem.module.scss
@@ -1,6 +1,6 @@
 .MenuItem {
    $p: &;
-   &__button {
+   &__link {
       display: flex;
       align-items: center;
       justify-content: space-between;
