--- a/resources/main/src/scss/tools/variables.scss
+++ b/resources/main/src/scss/tools/variables.scss
@@ -15,7 +15,8 @@ $purpleColorHover: #b4b5b8;
 
 
 $headerZIndex: 900;
-$overlayZindex: 700;
+$overlayZindex: 2000;
+$overlayLowerHeaderZindex: 800;
 $asideZindex: 800;
 $modalZindex: 1000;
 
