--- a/resources/main/src/pages/RoomsPage/ui/RoomsList/RoomsList.module.scss
+++ b/resources/main/src/pages/RoomsPage/ui/RoomsList/RoomsList.module.scss
@@ -2,4 +2,25 @@
    display: grid;
    gap: rem(40);
    grid-template-columns: repeat(auto-fill, minmax(em(270), 1fr));
+
+   &__pageEmpty {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+   
+      width: 100%;
+   }
+
+   &__empty {
+      width: 100%;
+
+      text-align: center;
+
+      opacity: 0.5;
+
+      color: $blueColor;
+
+      font-size: rem(36);
+      font-weight: 700;
+   }
 }
