--- a/resources/main/src/shared/ui/PageLoader/ui/PageLoader.module.scss
+++ b/resources/main/src/shared/ui/PageLoader/ui/PageLoader.module.scss
@@ -1,9 +1,7 @@
 .PageLoader {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
 
-	width: 100%;
-
-	height: 100%;
+	transform: translate(-50%, -50%);
 }
