--- a/resources/main/src/pages/RoomsPage/ui/RoomsList/RoomsList.module.scss
+++ b/resources/main/src/pages/RoomsPage/ui/RoomsList/RoomsList.module.scss
@@ -4,16 +4,18 @@
    grid-template-columns: repeat(auto-fill, minmax(em(270), 1fr));
 
    &__pageEmpty {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-   
-      width: 100%;
+
    }
 
    &__empty {
-      width: 100%;
+      position: fixed;
+      top: 50%;
+      left: 50%;
 
+      width: 100%;
+      padding: 0 rem(10);
+
+      transform: translate(-50%, -50%);
       text-align: center;
 
       opacity: 0.5;
