Fix layouts for mobile, fix breadcrumbs

--- a/resources/main/src/features/Menu/ui/UserMenu/UserMenu.module.scss
+++ b/resources/main/src/features/Menu/ui/UserMenu/UserMenu.module.scss
@@ -10,6 +10,16 @@
    }
 
    &__icon {
+      width: em(50);
+      height: em(50);
+
+      transition: font-size $primaryTransition;
+
+      font-size: rem(16);
+
+      @media (max-width: em($mobile)) {
+         font-size : rem(11);
+      }
    }
 
    &__dropDown {
