--- a/resources/main/src/shared/ui/Title/ui/Title.module.scss
+++ b/resources/main/src/shared/ui/Title/ui/Title.module.scss
@@ -9,4 +9,14 @@
       font-size: rem(14);
       line-height: 170%;
    }
+
+   &:not(:last-child) {
+      margin-bottom: rem(50);
+
+      transition: margin-bottom $primaryTransition;
+
+      @media (max-width: em($tablet)) {
+         margin-bottom: rem(30);
+      }
+   }
 }
