--- a/resources/main/src/shared/ui/Modal/ui/Modal.module.scss
+++ b/resources/main/src/shared/ui/Modal/ui/Modal.module.scss
@@ -4,16 +4,26 @@
 	overflow: auto;
 	
 	&__content {
+		position: relative;
+
 		margin: rem(10);
-		padding: rem(30) rem(20);
+		padding: rem(30) rem(35);
+		padding-top: rem(100);
+		padding-bottom: rem(100);
 
 		transition: all 0.5s ease;
 
 		border-radius: rem(20);
 
 		background-color: #fff;
-		box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.1);
+		box-shadow: 0 rem(4) rem(30) 0 rgba(0, 0, 0, 0.1);
 	}
+
+	&__closeButton {
+      position: absolute;
+      top: rem(30);
+      right: rem(35);
+   }
 
 	&_enter {
 		#{$p} {
@@ -63,4 +73,37 @@
 			}
 		}
 	}
+}
+
+.CloseButton {
+   $p: &;
+
+   display: flex;
+   align-items: center;
+   justify-content: center;
+
+   width: rem(50);
+   height: rem(50);
+
+   transition: background-color $primaryTransition, color $primaryTransition;
+
+   border: rem(2) solid $blueColor;
+   border-radius: 50%;
+
+   &:hover {
+      background-color: $blueColor;
+
+      #{$p} {
+         &__icon {
+            fill: $whiteColor;
+         }
+      }
+   }
+
+   &__icon {
+      fill: $blueColor;
+
+      width: rem(20);
+      height: rem(20);
+   }
 }
