--- a/resources/main/src/pages/RoomPage/ui/FulfilledRemoveBookModal/FulfilledRemoveBookModal.module.scss
+++ b/resources/main/src/pages/RoomPage/ui/FulfilledRemoveBookModal/FulfilledRemoveBookModal.module.scss
@@ -1,10 +1,4 @@
 .FulfilledRemoveBookModal {
-   position: relative;
-
-   padding: rem(30) rem(35);
-   padding-top: rem(100);
-   padding-bottom: rem(100);
-
    text-align: center;
 
    &__title {
@@ -13,11 +7,16 @@
       font-size: rem(32);
    }
 
-   &__paragraph {
-      display: flex;
-      flex-direction: column;
-      row-gap: rem(8);
 
+   &__mark {
+      display: inline;
+
+      color: $redColor;
+
+      background-color: transparent;
+   }
+
+   &__paragraph {
       font-size: rem(22);
 
       &_1 {
@@ -25,6 +24,9 @@
       }
 
       &_2 {
+         display: flex;
+         flex-direction: column;
+         row-gap: rem(10);
       }
    }
 
