--- a/resources/main/src/pages/BookedPage/ui/BookedRoomsList/BookedRoomsList.module.scss
+++ b/resources/main/src/pages/BookedPage/ui/BookedRoomsList/BookedRoomsList.module.scss
@@ -1,6 +1,5 @@
 .BookedRoomsList {
    display: grid;
-   gap: rem(40);
    grid-template-columns: repeat(auto-fill, minmax(em(270), 1fr));
 
 
@@ -23,4 +22,5 @@
       font-size: rem(36);
       font-weight: 700;
    }
+   @include adaptiveValue("gap", 40, 10, 0, $widthTo: $smallMobile);
 }
