--- a/resources/main/src/features/Menu/ui/Aside/Aside.module.scss
+++ b/resources/main/src/features/Menu/ui/Aside/Aside.module.scss
@@ -7,6 +7,8 @@
    height: 100%;
    padding: 0 rem(10);
 
+   transition: left $primaryTransition;
+
    background-color: white;
    box-shadow: 11px 11px 20.4px 2px rgba(63, 64, 155, 0.42);
 
